fix: fix forgot password flow
